<resources>
    <string name="action_settings">Settings</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="key_name">Key Name</string>
    <string name="wallet">Wallet</string>
    <string name="create_new_wallet">Create new wallet</string>
    <string name="path">Path</string>
    <string name="descriptor">Descriptor</string>
    <string name="xprv">Extended Private Key</string>
    <string name="xpub">Extended Public Key</string>
    <string name="mnemonic">Mnemonic Seed Words</string>
    <string name="electrum_url">Electrum URL</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="fill_all_fields_before_continue">Fill all fields before continue</string>
    <string name="single_key_descriptor">wpkh(%1$s/0/*)</string>

    <string name="title_key_list">Keys</string>
    <string name="title_wallet_list">Wallets</string>
    <string name="title_wallet">Wallet</string>
    <string name="subtitle_wallet">%1$s [%2$s]</string>
    <string name="title_add_wallet">Add New Wallet</string>
    <string name="title_receive">Receive</string>
    <string name="title_send">Send</string>
    <string name="title_setup">Setup</string>

    <string name="setup_inst">Write down your twelve wallet seed words and click OK when done. This is the only time you will be shown these words.</string>
    <string name="setup_ok">OK</string>
    <string name="seed_index_1">1.</string>
    <string name="seed_index_2">2.</string>
    <string name="seed_index_3">3.</string>
    <string name="seed_index_4">4.</string>
    <string name="seed_index_5">5.</string>
    <string name="seed_index_6">6.</string>
    <string name="seed_index_7">7.</string>
    <string name="seed_index_8">8.</string>
    <string name="seed_index_9">9.</string>
    <string name="seed_index_10">10.</string>
    <string name="seed_index_11">11.</string>
    <string name="seed_index_12">12.</string>
    <string name="btc_units">BTC</string>
    <string name="sat_units">SAT</string>
    <string name="balance">BALANCE</string>
    <string name="sat">sat</string>
    <string name="receive">Receive</string>
    <string name="send">Send</string>
    <string name="settings">Settings</string>
    <string name="key_id">Key Id</string>
    <string name="network">Network</string>
    <string name="no_key_dialog_message">You must create a key before creating a new wallet.</string>
    <string name="no_key_dialog_title">Key Required</string>
    <string name="no_key_ok">OK</string>
    <string name="no_key_cancel">CANCEL</string>
    <string name="title_key">Key</string>
    <string name="subtitle_key">%1$s [%2$s]</string>
    <string name="title_add_key">Add New Key</string>
</resources>
