<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="org.magicalbitcoin.androidapp.key.KeyFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_key_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_key_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/key_name"
            tools:text="Test Key 1" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linear_layout_key_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/key_network"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="testnet" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/key_id"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/key_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="iDf6j4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xprv"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/key_priv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            tools:text="tprv8ZgxMBicQKsPexGYyaFwnAsCXCjmz2FaTm6LtesyyihjbQE3gRMfXqQBXKM43DvC1UgRVv1qom1qFxNMSqVAs88qx9PhgFnfGVUdiiDf6j4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xpub"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/key_pub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            tools:text="tpub8ZgxMBicQKsPexGYyaFwnAsCXCjmz2FaTm6LtesyyihjbQE3gRMfXqQBXKM43DvC1UgRVv1qom1qFxNMSqVAs88qx9PhgFnfGVUdiiDf6j4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_key_mnemonic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mnemonic"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_update_key_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/add"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>